chore: versions & enforcer maven plugins